feat: update BDEngineParser to support world transform calculations
- Added WorldTransformCalculator for calculating world transforms of ProjectElements.
- Introduced TransformUtils for converting data structures to Matrix4f.
- Enhanced ProjectElement with worldTransform field and corresponding getters/setters.
- Updated parsing methods to include world transform calculations.