@@ -5,6 +5,7 @@ import com.google.gson.GsonBuilder;
 import com.google.gson.JsonSyntaxException;
 import com.google.gson.reflect.TypeToken;
 import dev.twme.bdengineparser.exception.BDEngineParsingException;
+import dev.twme.bdengineparser.internal.WorldTransformCalculator; // Assumes this is public in internal package
 import dev.twme.bdengineparser.model.ProjectElement;
 
 import java.io.IOException;
@@ -20,17 +21,19 @@ import java.nio.file.Paths;
 import java.util.List;
 
 /**
- * BDEngineParser is a utility class for parsing BD Engine project files.
+ * BDEngineParser is a utility class for parsing BDEngine project files and calculating world transforms.
  */
 public class BDEngineParser {
 
     private final Gson gson;
+    private final WorldTransformCalculator transformCalculator;
 
     /**
      * Constructs a BDEngineParser with a default Gson instance.
      */
     public BDEngineParser() {
         this.gson = new GsonBuilder().create();
+        this.transformCalculator = new WorldTransformCalculator();
     }
 
     /**
@@ -40,23 +43,27 @@ public class BDEngineParser {
      */
     public BDEngineParser(Gson gson) {
         this.gson = gson;
+        this.transformCalculator = new WorldTransformCalculator();
     }
 
+    // --- Raw Parsing Methods (without automatic transform calculation) ---
+
     /**
-     * Parses a BD Engine project file from the specified file path.
+     * Parses a BDEngine project file from the specified file path without calculating world transforms.
      *
-     * @param filePath the path to the BD Engine project file
+     * @param filePath the path to the BDEngine project file
      * @return a list of ProjectElement objects parsed from the file
      * @throws BDEngineParsingException if there is an error reading or parsing the file
+     * @throws IllegalArgumentException if filePath is null or empty
      */
-    public List<ProjectElement> parseFromFile(String filePath) throws BDEngineParsingException {
+    public List<ProjectElement> parseFromFileRaw(String filePath) throws BDEngineParsingException {
         if (filePath == null || filePath.trim().isEmpty()) {
             throw new IllegalArgumentException("File path cannot be null or empty.");
         }
         try {
             Path path = Paths.get(filePath);
-            String jsonContent = new String(Files.readAllBytes(path), StandardCharsets.UTF_8);
-            return parseJsonString(jsonContent);
+            String jsonContent = Files.readString(path);
+            return parseJsonStringRaw(jsonContent);
         } catch (InvalidPathException e) {
             throw new BDEngineParsingException("Invalid file path: " + filePath, e);
         } catch (IOException e) {
@@ -65,19 +72,24 @@ public class BDEngineParser {
     }
 
     /**
-     * Parses a BD Engine project file from the specified InputStream.
+     * Parses a BDEngine project file from the specified InputStream without calculating world transforms.
      *
-     * @param inputStream the InputStream containing the BD Engine project data
+     * @param inputStream the InputStream containing the BDEngine project data
      * @return a list of ProjectElement objects parsed from the InputStream
      * @throws BDEngineParsingException if there is an error reading or parsing the InputStream
+     * @throws IllegalArgumentException if inputStream is null
      */
-    public List<ProjectElement> parseFromInputStream(InputStream inputStream) throws BDEngineParsingException {
+    public List<ProjectElement> parseFromInputStreamRaw(InputStream inputStream) throws BDEngineParsingException {
         if (inputStream == null) {
             throw new IllegalArgumentException("Input stream cannot be null.");
         }
         try (Reader reader = new InputStreamReader(inputStream, StandardCharsets.UTF_8)) {
             Type listType = new TypeToken<List<ProjectElement>>() {}.getType();
-            return gson.fromJson(reader, listType);
+            List<ProjectElement> elements = gson.fromJson(reader, listType);
+            if (elements == null) { // Check for null result, e.g. if JSON string is "null"
+                throw new BDEngineParsingException("Parsed result is null. The JSON content might represent a null value.");
+            }
+            return elements;
         } catch (JsonSyntaxException e) {
             throw new BDEngineParsingException("Error parsing JSON from input stream: Invalid JSON syntax.", e);
         } catch (IOException e) {
@@ -86,13 +98,14 @@ public class BDEngineParser {
     }
 
     /**
-     * Parses a JSON string representing a BD Engine project.
+     * Parses a JSON string representing a BDEngine project without calculating world transforms.
      *
      * @param jsonString the JSON string to parse
      * @return a list of ProjectElement objects parsed from the JSON string
      * @throws BDEngineParsingException if there is an error parsing the JSON string
+     * @throws IllegalArgumentException if jsonString is null
      */
-    public List<ProjectElement> parseJsonString(String jsonString) throws BDEngineParsingException {
+    public List<ProjectElement> parseJsonStringRaw(String jsonString) throws BDEngineParsingException {
         if (jsonString == null) {
             throw new IllegalArgumentException("JSON string cannot be null.");
         }
@@ -105,6 +118,70 @@ public class BDEngineParser {
             return elements;
         } catch (JsonSyntaxException e) {
             throw new BDEngineParsingException("Error parsing JSON string: Invalid JSON syntax.", e);
+        }
+    }
+
+    // --- Combined Parsing and Transform Calculation Methods ---
+
+    /**
+     * Parses a BDEngine project file from the specified file path AND calculates world transforms for all elements.
+     * The calculated transforms are stored in each {@link ProjectElement#getWorldTransform()}.
+     *
+     * @param filePath the path to the BDEngine project file
+     * @return a list of ProjectElement objects with their world transforms calculated
+     * @throws BDEngineParsingException if there is an error reading or parsing the file
+     * @throws IllegalArgumentException if filePath is null or empty
+     */
+    public List<ProjectElement> parseFromFile(String filePath) throws BDEngineParsingException {
+        List<ProjectElement> rootElements = parseFromFileRaw(filePath);
+        calculateWorldTransformsForElements(rootElements);
+        return rootElements;
+    }
+
+    /**
+     * Parses a BDEngine project file from the specified InputStream AND calculates world transforms for all elements.
+     * The calculated transforms are stored in each {@link ProjectElement#getWorldTransform()}.
+     *
+     * @param inputStream the InputStream containing the BDEngine project data
+     * @return a list of ProjectElement objects with their world transforms calculated
+     * @throws BDEngineParsingException if there is an error reading or parsing the InputStream
+     * @throws IllegalArgumentException if inputStream is null
+     */
+    public List<ProjectElement> parseFromInputStream(InputStream inputStream) throws BDEngineParsingException {
+        List<ProjectElement> rootElements = parseFromInputStreamRaw(inputStream);
+        calculateWorldTransformsForElements(rootElements);
+        return rootElements;
+    }
+
+    /**
+     * Parses a JSON string representing a BDEngine project AND calculates world transforms for all elements.
+     * The calculated transforms are stored in each {@link ProjectElement#getWorldTransform()}.
+     *
+     * @param jsonString the JSON string to parse
+     * @return a list of ProjectElement objects with their world transforms calculated
+     * @throws BDEngineParsingException if there is an error parsing the JSON string
+     * @throws IllegalArgumentException if jsonString is null
+     */
+    public List<ProjectElement> parseJsonString(String jsonString) throws BDEngineParsingException {
+        List<ProjectElement> rootElements = parseJsonStringRaw(jsonString);
+        calculateWorldTransformsForElements(rootElements);
+        return rootElements;
+    }
+
+
+    // --- Standalone Transform Calculation Method ---
+
+    /**
+     * Calculates world transforms for a pre-parsed list of ProjectElements.
+     * This method modifies the {@link ProjectElement} instances in the list by setting their
+     * world transform via {@link ProjectElement#setWorldTransform(org.joml.Matrix4f)}.
+     * The calculated transforms are relative to the world origin (0,0,0).
+     *
+     * @param rootElements The list of root ProjectElements. If null or empty, the method does nothing.
+     */
+    public void calculateWorldTransformsForElements(List<ProjectElement> rootElements) {
+        if (rootElements != null && !rootElements.isEmpty()) {
+            this.transformCalculator.calculateWorldTransforms(rootElements);
         }
     }
 }
